# msise00

./: .appveyor.yml  .coveragerc  .flake8  .gitignore  .gitmodules  .mypy.ini  .travis.yml  AltitudeProfile.py  CMakeLists.txt  DemoMSIS.py  LICENSE.txt  MANIFEST.in  MSISE00.py  Makefile  Makefile.f2py  README.md  README.rst  README_matlab.md  RunMSIS.py  TestAll.m  TimeProfile.py  Worldgrid.py  azure-pipelines.yaml  azure-pipelines.yml  demo_msis.py  fortrandates.py  meson.build  msis00.py  msise00.m  nrlmsise00_sub.for  physics_constants.f90  physics_msis.f90  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  suntest.py
+msise00/: TestLint.m  TestUnit.m  cmake.m  lint_folder.m  msise00.m  plotalt.m  plottime.m  test_mod.m
+msise00/private/: cmake.m  fix_macos.m
+msise00/python-matlab/: msise00.m  plotmsis.m  xarrayind2vector.m
.archive/: .travis.yml  f2py.py  msise00.m
.github/: FUNDING
.github/workflows/: ci-matlab.yml  ci.yml  ci_linux.yml  ci_mac.yml  ci_windows.yml  publish-python-package.yml
Examples/: AltitudeProfile.m  AltitudeProfile.py  TimeProfile.m  TimeProfile.py  Worldgrid.py  suntest.py
archive/: .travis.yml  f2py.py  msise00.m
cmake/: compilers.cmake
fortran/: nrlmsise00_sub.for
fortrancode/: Makefile  nrlmsise00_driver.for  nrlmsise00_sub.for
matlab/: AltitudeProfile.m  RunMSISE00.m  TimeProfile.m  build.m  cmake.m  date2doy.m  datetimerange.m  is_file.m  lint_folder.m  meson.m  msise00.m  plotalt.m  plottime.m  runcmd.m  setup.m  setup_cmake.m  setup_meson.m  setup_msise00.m  test_mod.m
matlab/python-matlab/: msise00.m  plotmsis.m  xarrayind2vector.m
msise00/: CMakeLists.txt  __init__.py  __main__.py  base.py  build.py  coro.py  plots.py  runmsis.py  timeutils.py  worldgrid.py
msise00/fortran/: CMakeLists.txt  nrlmsise00_sub.for
msise00/tests/: ref2.nc  test_ccmc.py  test_grid.py  test_mod.m  test_point.py  test_time_grid.py
reference/: Makefile  nrlmsise00_driver.for  nrlmsise00_sub_ORIGINAL.for  physics_constants.f90  physics_msis.f90  utils_spline.f90
src/: CMakeLists.txt  meson.build  msise00_driver.f90  nrlmsise00_sub.for  physics_constants.f90
src/msise00/: CMakeLists.txt  __init__.py  __main__.py  base.py  build.py  meson.build  plots.py  setup.cmake  timeutils.py  worldgrid.py
src/msise00/fortran/: msise00_data.f  msise00_driver.f90  msise00_sub.f
src/msise00/tests/: __init__.py  ref1.nc  ref3.nc  ref4.nc  ref5.nc  ref6.nc  test_ccmc.py  test_grid.py  test_matlab.py  test_module.py  test_point.py  test_time_grid.py
test/: test.py
tests/: assert_allclose.m  ref1.nc  ref2.nc  ref3.nc  ref4.nc  ref5.nc  ref6.nc  test.py  test_all.py  test_ccmc.py  test_grid.py  test_matlab.py  test_mod.m  test_module.py  test_msise00.m  test_msise00_matlab.m  test_point.py  test_script.py  test_time_grid.py
