[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msise00"
description = "Python API for Fortran MSISE-00 neutral atmosphere model."
keywords = ["atmosphere", "geospace"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Fortran",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Atmospheric Science"
]
dependencies = ["numpy", "xarray", "geomagindices>=1.4.0"]
dynamic = ["readme", "version"]
requires-python = ">=3.11"

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "msise00.__version__"}

[project.optional-dependencies]
tests = ["pytest", "netCDF4", "mypy"]
plot = [
    "matplotlib",
    "astropy",
    "pymap3d"
]


[tool.black]
line-length = 100

[tool.mypy]
files = ["./"]

ignore_missing_imports = true
allow_redefinition = true
exclude = [
    ".archive/",
    "^build([/\\\\]|$)"
]
