[metadata]
name = msise00
version = 1.4.0
description = Python API for Fortran MSISE-00 neutral atmosphere model.
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
url = https://github.com/space-physics/msise00
keywords =
  atmosphere
  geospace
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Fortran
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 40.6
  pip >= 10
scripts =
  AltitudeProfile.py
  MSISE00.py
  suntest.py
  TimeProfile.py
  Worldgrid.py
packages = find:
zip_safe: false
install_requires =
  python-dateutil
  numpy
  xarray
  geomagindices

[options.data_files]
src =
  src/msise00_driver.f90
  src/nrlmsise00_sub.for

[options.extras_require]
tests =
  pytest >= 3.9
cov =
  pytest-cov
  coveralls
  flake8
  mypy
plot =
  netCDF4
  matplotlib
  astropy
  seaborn
  pymap3d

[options.entry_points]
console_scripts =
  MSISE00 = MSISE00:main
