[metadata]
name = msise00
version = 1.6.1
description = Python API for Fortran MSISE-00 neutral atmosphere model.
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
url = https://github.com/space-physics/msise00
keywords =
  atmosphere
  geospace
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Fortran
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
packages = find:
include_package_data = True
zip_safe = False
install_requires =
  python-dateutil
  numpy
  xarray
  geomagindices >= 1.2.4

[options.extras_require]
tests =
  pytest >= 3.9
  pytest-cov
  netCDF4
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
plot =
  matplotlib
  astropy
  seaborn
  pymap3d
